# learn_iceberg

./: README.md
iceberg_pyspark_project/: iceberg_concepts.ipynb  iceberg_features.ipynb  learn_iceberg.ipynb  pyproject.toml
iceberg_pyspark_project/spark-warehouse/iceberg/schema/customers_5k/data/: .00000-5-6bff4b4f-7231-425f-83ec-22739dcb9033-0-00001.parquet.crc  00000-5-6bff4b4f-7231-425f-83ec-22739dcb9033-0-00001.parquet
iceberg_pyspark_project/spark-warehouse/iceberg/schema/customers_5k/metadata/: .e32e4125-2eb0-4328-a8e5-b5516fb23ffb-m0.avro.crc  .snap-698228738996715842-1-e32e4125-2eb0-4328-a8e5-b5516fb23ffb.avro.crc  .v1.metadata.json.crc  e32e4125-2eb0-4328-a8e5-b5516fb23ffb-m0.avro  snap-698228738996715842-1-e32e4125-2eb0-4328-a8e5-b5516fb23ffb.avro  v1.metadata.json
iceberg_pyspark_project/spark-warehouse/iceberg/schema/customers_ice_concepts_cow/data/: .00000-11-97091feb-35a9-47f2-ae3f-a2bc5c2846f2-0-00001.parquet.crc  .00000-6-299a4f12-fdca-4729-b83b-3579adb078b0-0-00001.parquet.crc  00000-11-97091feb-35a9-47f2-ae3f-a2bc5c2846f2-0-00001.parquet
iceberg_pyspark_project/spark-warehouse/iceberg/schema/customers_ice_concepts_cow/metadata/: .5aed3779-66a0-4179-8852-92030b7caa14-m0.avro.crc  .5aed3779-66a0-4179-8852-92030b7caa14-m1.avro.crc  .b5674c55-d6db-4650-beff-fe85ce01f0eb-m0.avro.crc  .d3e7088d-854b-4ba1-9031-d741bcb3d771-m0.avro.crc  .d3e7088d-854b-4ba1-9031-d741bcb3d771-m1.avro.crc  .snap-1748070160842181900-1-d3e7088d-854b-4ba1-9031-d741bcb3d771.avro.crc  .snap-2382377649439736280-1-5aed3779-66a0-4179-8852-92030b7caa14.avro.crc  v1.metadata.json  (+16 more)
(+1127 files in other folders)
