[project]
name = "learn-iceberg"
version = "0.1.0"
description = ""
authors = [
    {name = "pradeepetl",email = "59853089+pradeepetl@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pyspark = "^3.5.5"
ipykernel = "^6.29.5"

